--- a/index.html
+++ b/index.html
@@ -11,38 +11,46 @@
 </head>
 <body>
 
-  <div class="masthead">
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#main">Jump to navigation</a></li>
+  </ul>
+
+  <header role="banner" class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <div class="nav">
+    <nav class="nav" role="navigation" id="nav">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Shrubs</a></li>
-          <li><a href="#">Prices</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#shrubs">Shrubs</a></li>
+          <li><a href="#prices">Prices</a></li>
+          <li><a href="#news">News</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ol>
       </div>
-    </div>
-  </div>
+    </nav>
+  </header>
 
-  <div>
+  <main role="main" id="main">
+
     <div class="about push" id="about">
       <div class="embed embed-24by10">
         <img class="embed-item" src="images/shrbs.jpg" alt="">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h1 class="push-0">About</h1>
+          <h2 class="push-0">About</h1>
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
 
-    <div>
+    <section id="shrubs">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Products</h1>
+        <h2 class="push-0 color-brand-dark">Products</h1>
         <p class="mega max-length">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
@@ -50,60 +58,67 @@
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub 2.jpg">
             <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h1 class="mega push-0">Shrubs with laurels</h1>
+              <h3 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-3.jpg">
             <div class="gutter-1-4" id="two-level-shrub">
-              <h1 class="mega push-0">Two-level shrubbery</h1>
+              <h3 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div class="prices pad-t pad-b">
+    <section id="prices" class="prices pad-t pad-b">
       <div class="wrapper gutter-1-2">
-        <h1 class="push-0 color-brand-dark">Prices</h1>
+        <h2 class="push-0 color-brand-dark">Prices</h1>
         <span class="mega max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
+      </div>
 
-        <table>
-          <tr>
-            <td>&nbsp;</td>
-            <td>Small</td>
-            <td>Medium</td>
-            <td>Large</td>
-          </tr>
-          <tr>
-            <td>Grassy shrubs</td>
-            <td>$10</td>
-            <td>$20</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <td>Shrubs with laurels</td>
-            <td>$40</td>
-            <td>$70</td>
-            <td>$100</td>
-          </tr>
-          <tr>
-            <td>Two-level shrubbery</td>
-            <td>$50</td>
-            <td>$70</td>
-            <td>$90</td>
-          </tr>
+        <table class="gutter-2">
+          <caption>Prices for small, medium and large shrubberies.</caption>
+          <thead>
+            <tr>
+              <td>&nbsp;</td>
+              <td>Small</td>
+              <td>Medium</td>
+              <td>Large</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Grassy shrubs</td>
+              <td>$10</td>
+              <td>$20</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <td scope="row">Shrubs with laurels</td>
+              <td>$40</td>
+              <td>$70</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <td scope="row">Two-level shrubbery</td>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </div>
 
-    <div class="news pad-t pad-b">
+    <section id="news" class="news pad-t pad-b">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">News</h1>
         <p class="mega max-length">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
@@ -123,24 +138,25 @@
           </li>
         </ol>
       </div>
+    </section>
 
-    <div class="contact pad-t pad-b">
+    <section id="contact" class="contact pad-t pad-b">
       <div class="wrapper">
-        <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
+        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length gutter-1-2">We want… a shrubbery!</p>
 
         <form class="grid" method="post">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Your name</span>
-            <input>
+            <label for="name" class="push-1-8">Your name</span>
+            <input id="name">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">E-mail address</span>
-            <input>
+            <label for="email" class="push-1-8">E-mail address</span>
+            <input type="email" id="email">
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Type of shrubbery</span>
-            <select>
+            <label for="type" class="push-1-8">Type of shrubbery</span>
+            <select id="type">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
@@ -152,9 +168,10 @@
           </div>
         </form>
       </div>
-    </div>
+    </section>
+  </main>
 
-  <div class="footer pad-t-1-2 pad-b-1-2">
+  <footer role="contentinfo" class="footer pad-t-1-2 pad-b-1-2">
     <div class="wrapper gutter-1-2">
       <p class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</p>
     </div>
