--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Things and stuff and junk</title>
+  <title>Accessibility</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -41,7 +41,7 @@
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h2 class="push-0">About</h1>
+          <h2 class="push-0">About</h2>
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
@@ -50,7 +50,7 @@
 
     <section id="shrubs">
       <div class="wrapper gutter-1-2">
-        <h2 class="push-0 color-brand-dark">Products</h1>
+        <h2 class="push-0 color-brand-dark">Products</h2>
         <p class="mega max-length">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
@@ -63,14 +63,14 @@
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub 2.jpg">
             <div class="gutter-1-4" id="shrubs-with-laurels">
-              <h3 class="mega push-0">Shrubs with laurels</h1>
+              <h3 class="mega push-0">Shrubs with laurels</h3>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-3.jpg">
             <div class="gutter-1-4" id="two-level-shrub">
-              <h3 class="mega push-0">Two-level shrubbery</h1>
+              <h3 class="mega push-0">Two-level shrubbery</h3>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
@@ -80,7 +80,7 @@
 
     <section id="prices" class="prices pad-t pad-b">
       <div class="wrapper gutter-1-2">
-        <h2 class="push-0 color-brand-dark">Prices</h1>
+        <h2 class="push-0 color-brand-dark">Prices</h2>
         <span class="mega max-length">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
       </div>
 
@@ -142,7 +142,7 @@
 
     <section id="contact" class="contact pad-t pad-b">
       <div class="wrapper">
-        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
+        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
         <p class="mega max-length gutter-1-2">We want… a shrubbery!</p>
 
         <form class="grid" method="post">
